[tool.poetry]
name = "prstack"
version = "0.1.0"
description = ""
authors = ["sgatewood-da <sean.gatewood@digitalasset.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "13.7.0"
typer = "0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
